<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/stdbg"
    tools:context=".MainActivityTutor">

    <Button
        android:id="@+id/quizzes"
        android:layout_width="135dp"
        android:layout_height="97dp"
        android:layout_gravity="start"
        android:backgroundTint="#3F51B5"
        android:enabled="true"
        android:fontFamily="@font/allerta_stencil"
        android:onClick="toQuiz"
        android:text="@string/quizzes"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forumBtn"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutprof"
        app:layout_constraintVertical_bias="0.062"
        app:strokeColor="#FFEB3B"
        app:strokeWidth="3dp"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/pp"
        android:layout_width="135dp"
        android:layout_height="97dp"
        android:layout_gravity="start"
        android:backgroundTint="#9C27B0"
        android:enabled="true"
        android:fontFamily="@font/allerta_stencil"
        android:onClick="toPassPapers"
        android:text="@string/past_papers"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        app:strokeColor="#FFEB3B"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/forumBtn"
        android:layout_width="135dp"
        android:layout_height="97dp"
        android:layout_gravity="start"
        android:backgroundTint="#FF5722"
        android:enabled="true"
        android:fontFamily="@font/allerta_stencil"
        android:onClick="toForum"
        android:text="@string/forum"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pp"
        app:layout_constraintVertical_bias="0.06"
        app:strokeColor="#FFEB3B"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/tutprof"
        android:layout_width="136dp"
        android:layout_height="95dp"
        android:layout_gravity="start"
        android:backgroundTint="#009688"
        android:enabled="true"
        android:fontFamily="@font/allerta_stencil"
        android:onClick="toProfile"
        android:text="Profile"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pp"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272"
        app:strokeColor="#FFEB3B"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="417dp"
        android:layout_height="47dp"
        android:background="#FFEB3B"
        android:fontFamily="@font/aclonica"
        android:gravity="center_horizontal"
        android:text="@string/wel"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0E0E0E"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#673AB7"
        android:backgroundTint="@color/teal_700"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/men"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHighlight="@color/purple_200"
        android:textColorHint="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameOfTut"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:fontFamily="@font/allerta_stencil"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#2196F3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="251dp"
        android:layout_height="252dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quizzes"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/img" />

</androidx.constraintlayout.widget.ConstraintLayout>